--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@
     padding-left: 10px;
     padding-right: 10px;
     color: #704a2a
+    
 }
 .desc h3 {
     padding-left: 20px;
@@ -186,7 +187,9 @@
         flex-wrap: wrap;
         padding-top: 60px;
         padding-right: 100px;
-        width: 90%;
+        width: 300px; 
+        height: 200px; 
+/*         width: 90%; */
     }
     .circle {
         height: 24px;
