--- a/style.css
+++ b/style.css
@@ -75,14 +75,9 @@
 }
 .desc p {
     text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    flex-wrap: wrap;
     padding-left: 10px;
     padding-right: 10px;
     color: #704a2a
-    
 }
 .desc h3 {
     padding-left: 20px;
@@ -105,10 +100,10 @@
     } 
     .vid-sup {
         padding-top: 30px;
-        border: 3px solid #551B14; 
-        padding: 0px;
-        max-width: 100%; 
-        box-sizing: border-box;
+        border: 3px solid #551B14; /* Border style and color */
+        padding: 0px; /* Padding around the video */
+        max-width: 100%; /* Ensure the video stays within its container */
+        box-sizing: border-box; /* Include padding and border in element's total width */
     }
 
     .intro {
@@ -181,15 +176,9 @@
     }
 
     .desc {
-        display: flex;
-        justify-content: center;
-        align-items: center; 
-        flex-wrap: wrap;
         padding-top: 60px;
         padding-right: 100px;
-        width: 300px; 
-        height: 200px; 
-/*         width: 90%; */
+        width: 90%;
     }
     .circle {
         height: 24px;
@@ -200,7 +189,6 @@
         top: 0;
         left: 0;
         pointer-events: none;
-        z-index: 99999999; 
+        z-index: 99999999; /* so that it stays on top of all other elements */
       }
 }
-
