--- a/style.css
+++ b/style.css
@@ -39,9 +39,9 @@
 
 .vid-sup {
     width: 100%;
-    border: 3px solid #551B14; /* Border style and color */
-    max-width: 100%; /* Ensure the video stays within its container */
-    box-sizing: border-box; /* Include padding and border in element's total width */
+    border: 3px solid #551B14;
+    max-width: 100%;
+    box-sizing: border-box; 
     
 }
 
@@ -100,10 +100,10 @@
     } 
     .vid-sup {
         padding-top: 30px;
-        border: 3px solid #551B14; /* Border style and color */
-        padding: 0px; /* Padding around the video */
-        max-width: 100%; /* Ensure the video stays within its container */
-        box-sizing: border-box; /* Include padding and border in element's total width */
+        border: 3px solid #551B14; 
+        padding: 0px; 
+        max-width: 100%; 
+        box-sizing: border-box; 
     }
 
     .intro {
